--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,16 @@ h2 {
     padding: 29px;
 }
 
+ 
+
+
+
+
+h3{
+  font-family: 'Cabin', sans-serif;font-weight: 200;
+  color: #FFFFFF;
+}
+
 /*Strip the ul of padding and list styling*/
 ul {
   list-style-type:none;
@@ -187,6 +197,11 @@ input[type=checkbox]:checked ~ #menu{
     margin: 6px;
 }
 
+/*.small-box:hover{
+    background-color:red;    
+    transition-delay:5s;
+}*/
+
 .image { 
    position: relative; 
    width: 100%; /* for IE 6 */
@@ -216,6 +231,145 @@ input[type=checkbox]:checked ~ #menu{
     width: 100%;
     margin: 4px;
     padding-top: 4%;
+}
+
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
+
+p {
+  font-size: 1.6em;
+  font-family: 'Lato', sans-serif;
+  background-color: #fff;
+  padding: 1em;
+  color: #002240;
+  margin-top: 0;
+}
+
+
+/* .button */
+
+.button {
+  display: inline-block;
+  position: relative;
+  margin: 1em;
+  padding: 0.67em;
+  border: 2px solid #FFF;
+  overflow: hidden;
+  text-decoration: none;
+  font-size: 2em;
+  outline: none;
+  background: transparent;
+  font-family: 'Cabin', sans-serif;font-weight: 200; 
+  color: #FFFFFF;
+    
+}
+
+.button span {
+  -webkit-transition: 5s;
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
+  transition: 0.6s;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+
+.button:before,
+.button:after {
+  content: '';
+  position: absolute;
+  top: 0.67em;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: 5s, opacity .6s;
+  -moz-transition: 5s, opacity 5s;
+  -o-transition: 5s, opacity 5s;
+  transition: 10s, opacity 10s;
+}
+
+
+/* :before */
+
+.button:before {
+  content: attr(data-hover);
+  -webkit-transform: translate(-150%, 0);
+  -moz-transform: translate(-150%, 0);
+  -ms-transform: translate(-150%, 0);
+  -o-transform: translate(-150%, 0);
+  transform: translate(-150%, 0);
+}
+
+
+/* :after */
+
+.button:after {
+  content: attr(data-active);
+  -webkit-transform: translate(150%, 0);
+  -moz-transform: translate(150%, 0);
+  -ms-transform: translate(150%, 0);
+  -o-transform: translate(150%, 0);
+  transform: translate(150%, 0);
+}
+
+
+/* Span on :hover and :active */
+
+.button:hover span,
+.button:active span {
+  opacity: 0;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
+  transform: scale(0.3);
+}
+
+
+/*  
+    We show :before pseudo-element on :hover 
+    and :after pseudo-element on :active 
+*/
+
+.button:hover:before,
+.button:active:after {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
+  -webkit-transition-delay: .4s;
+  -moz-transition-delay: .4s;
+  -o-transition-delay: .4s;
+  transition-delay: .4s;
+}
+
+
+/* 
+  We hide :before pseudo-element on :active
+*/
+
+.button:active:before {
+  -webkit-transform: translate(-150%, 0);
+  -moz-transform: translate(-150%, 0);
+  -ms-transform: translate(-150%, 0);
+  -o-transform: translate(-150%, 0);
+  transform: translate(-150%, 0);
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  transition-delay: 0s;
 }
 
 @media screen and (max-width : 760px){
