--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ ul {
   position: absolute;
 }
 
+footer p{
+  font-size: 20px;
+  font-family: 'Cabin', sans-serif;
+}
 /*Create a horizontal list with spacing*/
 li {
   display:inline-block;
@@ -195,16 +199,13 @@ input[type=checkbox]:checked ~ #menu{
 .small-box {
     width: 47%;
     height: 300px;
-    background: blue;
+    background: #615d5d;
     display: inline-block;
     float: left;
     margin: 0 auto;
     display: block;
     margin: 6px;
-    
-    max-width:500px;
-
-
+  
 }
 
 /*.small-box:hover{
@@ -298,6 +299,7 @@ p {
   -o-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
+
 
 .button:before,
 .button:after {
@@ -409,7 +411,22 @@ p {
   aside ul{
   display: block;
   }
+
+
 }
+
+
+@media screen and (max-width : 1200px){
+
+    aside li {
+    padding: 20px;
+    font-family: 'Cabin', sans-serif;
+    font-size: small;
+  }
+}
+
+
+
 
 @media screen and (max-width: 720px) {
   section {
@@ -437,8 +454,8 @@ p {
 
 aside {
     width: 100%;
-    height: 1500px;
-    background: #fbf1f1;
+ 
+       height: 1100px;
     display: inline-block;
     margin-top: 7px;
     margin-left: 6px;
@@ -448,5 +465,7 @@ aside {
   footer {
     clear: none;
   }
+
+
 
 }
